created first webpack module for navbar hover effects

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pho 69 | Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="./dist/main.js" defer></script>
 </head>
 <body>
     <div id="content">
@@ -15,23 +15,23 @@
             <h1><a href="" class="title">Welcome to Phở 69</a></h1>
             <div class="navbar">
                 <div class="navbar-item">
-                    <div><img src="../assets/img/noods.svg" id="home-nood" alt=""></div>
+                    <div><img src="assets/img/noods.svg" id="home-nood" alt=""></div>
                     <div><a href="#" id="home-link">Home</a></div>
                 </div>
                 <div class="navbar-item">
-                    <div><img src="../assets/img/noods.svg" id="menu-nood" alt=""></div>
+                    <div><img src="assets/img/noods.svg" id="menu-nood" alt=""></div>
                     <div><a href="#" id="menu-link">Menu</a></div>
                 </div>
                 <div class="navbar-item">
-                    <div><img src="../assets/img/noods.svg" id="story-nood" alt=""></div>
+                    <div><img src="assets/img/noods.svg" id="story-nood" alt=""></div>
                     <div><a href="#" id="story-link">Our Story</a></div>
                 </div>
                 <div class="navbar-item">
-                    <div><img src="../assets/img/noods.svg" id="order-nood" alt=""></div>
+                    <div><img src="assets/img/noods.svg" id="order-nood" alt=""></div>
                     <div><a href="#" id="order-link">Order Online</a></div>
                 </div>
                 <div class="navbar-item">
-                    <div><img src="../assets/img/noods.svg" id="contact-nood" alt=""></div>
+                    <div><img src="assets/img/noods.svg" id="contact-nood" alt=""></div>
                     <div><a href="#" id="contact-link">Contact</a></div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                         <h1>Our Phở is Phở-king Dank!</h1>
                     </div>
                     <div class="home-img">
-                        <img src="../assets/img/pho_home.jpg" alt="">
+                        <img src="assets/img/pho_home.jpg" alt="">
                     </div>
                 </div>
             </div>
