turned HTML for the home page tab into a js module

--- a/index.html
+++ b/index.html
@@ -7,36 +7,37 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="./assets/img/noods.svg">
     <script src="./dist/main.js" defer></script>
 </head>
 <body>
-    <div id="content">
-        <div class="bar-container" id="navbar">
-            <h1><a href="" class="title">Welcome to Phở 69</a></h1>
-            <div class="navbar">
-                <div class="navbar-item">
-                    <div><img src="assets/img/noods.svg" id="home-nood" alt=""></div>
-                    <div><a href="#" id="home-link">Home</a></div>
-                </div>
-                <div class="navbar-item">
-                    <div><img src="assets/img/noods.svg" id="menu-nood" alt=""></div>
-                    <div><a href="#" id="menu-link">Menu</a></div>
-                </div>
-                <div class="navbar-item">
-                    <div><img src="assets/img/noods.svg" id="story-nood" alt=""></div>
-                    <div><a href="#" id="story-link">Our Story</a></div>
-                </div>
-                <div class="navbar-item">
-                    <div><img src="assets/img/noods.svg" id="order-nood" alt=""></div>
-                    <div><a href="#" id="order-link">Order Online</a></div>
-                </div>
-                <div class="navbar-item">
-                    <div><img src="assets/img/noods.svg" id="contact-nood" alt=""></div>
-                    <div><a href="#" id="contact-link">Contact</a></div>
-                </div>
+    <div class="bar-container" id="navbar">
+        <h1><a href="" class="title">Welcome to Phở 69</a></h1>
+        <div class="navbar">
+            <div class="navbar-item">
+                <div><img src="assets/img/noods.svg" id="home-nood" alt=""></div>
+                <div><a href="#" id="home-link">Home</a></div>
+            </div>
+            <div class="navbar-item">
+                <div><img src="assets/img/noods.svg" id="menu-nood" alt=""></div>
+                <div><a href="#" id="menu-link">Menu</a></div>
+            </div>
+            <div class="navbar-item">
+                <div><img src="assets/img/noods.svg" id="story-nood" alt=""></div>
+                <div><a href="#" id="story-link">Our Story</a></div>
+            </div>
+            <div class="navbar-item">
+                <div><img src="assets/img/noods.svg" id="order-nood" alt=""></div>
+                <div><a href="#" id="order-link">Order Online</a></div>
+            </div>
+            <div class="navbar-item">
+                <div><img src="assets/img/noods.svg" id="contact-nood" alt=""></div>
+                <div><a href="#" id="contact-link">Contact</a></div>
             </div>
         </div>
-        <div class="window" id="window">
+    </div>
+    <div id="content">
+        <!-- <div class="window" id="window">
             <div class="home-container">
                 <div class="home-content">
                     <div class="home-text">
@@ -47,10 +48,10 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="footer" id="footer">
-            <div><h2>By @icepick-pauly for The Odin Project, 2020</h2></div>
-        </div>
+        </div> -->
     </div>
+    <div class="footer" id="footer">
+        <div><h2>By @icepick-pauly for The Odin Project, 2020</h2></div>
+    </div> 
 </body>
 </html>
